Add exclamation marks

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body class="container">
     <header>
-        <h1>TODOS</h1>
+        <h1>TODOS!</h1>
         <input id="task-input" type="text">
         <button id="enter">Enter</button>
     </header>
